test/scc/decl/semantic-errors/069.a
069.t:1:14: error: expected one of: ',', '=', ';' before '{' token